--- a/Project2/Project2/Views/Projects/Wood.cshtml
+++ b/Project2/Project2/Views/Projects/Wood.cshtml
@@ -1,4 +1,4 @@
-﻿@using Project2.Models;
+﻿@model Project2.Models.ProjectCategory
 
 @{
     ViewBag.Title = "Wood";
@@ -8,11 +8,15 @@
     <h1>Wood Projects</h1>
 
     <div class="row">
-        @foreach (KeyValuePair<int, Project> entry in ViewBag.WoodProjects) {
-            <div class="col-sm-4 text-center col-sm-offset-@entry.Key">
-                <a href="@Url.Action("Project", "Projects", new { Type = entry.Value.ProjectType, ProjectID = entry.Key })"> <img src="@Url.Content(entry.Value.ProjectImage[0])" /> </a>
-                <h2>@Html.ActionLink(entry.Value.ProjectName, "Project", "Projects", new { Type = entry.Value.ProjectType, ProjectID = entry.Key }, null)</h2>
+        @foreach (Project2.Models.Project project in Model.Projects) {
+            <div class="col-sm-4 text-center">
+                <a href="@Url.Action("Project", "Projects", new { Type = Model.ProjectTypeID, ProjectID = project.ProjectID })">
+                    <img src="@Url.Content(project.ProjectImage)" />
+                </a>
+                <h2>@Html.ActionLink(project.ProjectName, "Project", "Projects", new { Type = Model.ProjectTypeID, ProjectID = project.ProjectID }, null)</h2>
             </div>
         }
     </div>
 </div>
+
+
