--- a/Project2/Project2/Views/Shared/_Layout.cshtml
+++ b/Project2/Project2/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                             <li>@Html.ActionLink("Electronics", "Electronics", "Projects")</li>
                         </ul>
                     </li>
+                    <li>@Html.ActionLink("FAQ", "FAQ", "Home")</li>
                 </ul>
             </div>
         </div>
